--- a/index.html
+++ b/index.html
@@ -6,57 +6,49 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script rel="javascript" type="text/javascript" src="script.js"></script>
     <link
-      href="https://fonts.googleapis.com/css?family=Molle:400i"
+      href="https://fonts.googleapis.com/css?family=Concert+One"
       rel="stylesheet"
     />
   </head>
 
   <body>
+    <h1>Tic Tac Toe</h1>
     <div
-      style="text-align:center;
-              margin:100 auto;
-              width:100%;
-              padding-top:150px;
-              padding-left: 500px;
-              font-family: 'Molle', cursive;
-              
-              "
+      style="text-align: left; font-size: 20px; font-family: 'Concert One', cursive;"
     >
-      <br />
-      <div
-        style="float:left;
-                font-size: 20px;"
-      >
-        Player 1
-
-        <div style="font-size:20px;" id="player1">
-          0
-        </div>
+      Player 1
+      <div style="font-size:20px;" id="player1">
+        0
       </div>
-      <table
-        id="game"
-        style="float:left;
-                            margin-left:20px;
-                            font-family: 'Molle', cursive;
-                            "
-      ></table>
-
       <div
-        style="float:left;
-                margin-left:20px;
-                font-size: 20px;
-                font-family: 'Molle', cursive;
-                "
+        style="text-align: right; margin-left:20px; font-size: 20px; font-family: 'Concert One', cursive;"
       >
         Player 2
         <div
           id="player2"
-          style="font-size:20px;
-                                font-family: 'Molle', cursive;
-                              "
+          style="font-size:20px; font-family: 'Concert One', cursive;"
         >
           0
         </div>
+        <div
+          style="text-align:center;
+              margin:100 auto;
+              width:100%;
+              padding-top:150px;
+              padding-left: 500px;
+              font-family: 'Concert One', cursive;
+              "
+        >
+          <br />
+        </div>
+        <table
+          id="game"
+          style="float:left;
+                            margin-left:20px;
+                           font-family: 'Concert One', cursive;
+
+                            "
+        ></table>
       </div>
 
       <div class="clear"></div>
