--- a/index.html
+++ b/index.html
@@ -13,44 +13,23 @@
 
   <body>
     <h1>Tic Tac Toe</h1>
-    <div
-      style="text-align: left; font-size: 20px; font-family: 'Concert One', cursive;"
-    >
+    <hr />
+    <div class="player1">
       Player 1
-      <div style="font-size:20px;" id="player1">
+      <div class="scores" id="player1">
         0
       </div>
-      <div
-        style="text-align: right; margin-left:20px; font-size: 20px; font-family: 'Concert One', cursive;"
-      >
+      <hr class="divider" />
+      <div class="player2">
         Player 2
-        <div
-          id="player2"
-          style="font-size:20px; font-family: 'Concert One', cursive;"
-        >
+        <div class="scores" id="player2">
           0
         </div>
-        <div
-          style="text-align:center;
-              margin:100 auto;
-              width:100%;
-              padding-top:150px;
-              padding-left: 500px;
-              font-family: 'Concert One', cursive;
-              "
-        >
+        <div class="gameboard">
           <br />
         </div>
-        <table
-          id="game"
-          style="float:left;
-                            margin-left:20px;
-                           font-family: 'Concert One', cursive;
-
-                            "
-        ></table>
+        <table class="game" id="game"></table>
       </div>
-
       <div class="clear"></div>
     </div>
   </body>
