Added center styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       </div>
     </div>
     <br />
-    <table class="game" id="game"></table>
+
+    <table align="center" class="game" id="game"></table>
     <div class="clear"></div>
   </body>
 </html>
